added CRUD apis fior the models
